--- a/public/cashier/live-feed.html
+++ b/public/cashier/live-feed.html
@@ -39,6 +39,9 @@
 
   <script src="/scripts/live-feed.js"></script>
   <script src="/scripts/banner.js"></script>
+  <footer>
+    <p>Developed by Chris Staples ("Coastie") for Festival of Friendship <span title="Hoers">🐴</span></p>
+</footer>
 </body>
 </html>
 
