--- a/public/maint/index.html
+++ b/public/maint/index.html
@@ -255,6 +255,16 @@
 
   <script src="/scripts/maintenance.js"></script>
   <script src="/scripts/daypilot-modal-3.15.1.min.js"></script>
+  
+  <script>
+
+    document.getElementById("maintenance-password").addEventListener("keyup", function (event) {
+      if (event.keyCode === 13) {
+        document.getElementById('login-button').click();
+      }
+    })
+  </script>
+
   <footer>
     <p>Developed by Chris Staples ("Coastie") for Festival of Friendship <span title="Hoers">🐴</span></p>
   </footer>
