Removed links to custom logos

--- a/public/cashier/index.html
+++ b/public/cashier/index.html
@@ -7,6 +7,7 @@
 
   <!-- Core styles reused from admin area -->
   <link rel="stylesheet" href="/styles/admin-styles.css">
+  <link rel="icon" type="image/png" href="/images/favicon.png" />
 
   <!-- Minimal additions for sticky header layout -->
   <style>
