--- a/public/maint/index.html
+++ b/public/maint/index.html
@@ -6,6 +6,8 @@
   <title>Maintenance Panel - Charity Auction</title>
 
   <link rel="stylesheet" href="/styles/maintenance.css" />
+  <link rel="icon" type="image/png" href="/images/favicon.png" />
+
 </head>
 <body>
   <main>
