--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,8 @@
     <title>Auction - Submit Item</title>
     <link rel="stylesheet" href="/styles/styles.css">
 
-    <link rel="icon" type="image/png" href="/images/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
-    <link rel="shortcut icon" href="/images//favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/images//apple-touch-icon.png" />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="icon" type="image/png" href="/images/favicon.png" />
+
 </head>
 <body>
     <header>
