Refreshed online user guide

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -85,7 +85,7 @@
                     </div>
 
 
-                    <a href="/help/admin-guide.html" target="_blank"><button>User Guide</button></a>
+                    <a href="/help/user-guide.html?section=admin-panel" target="_blank"><button>User Guide</button></a>
                     <button id="logout">Logout</button>
                 </div>
             </div>
