--- a/public/cashier/index.html
+++ b/public/cashier/index.html
@@ -53,6 +53,7 @@
     <!-- <label for="settle-select">Settlement & Payment Panel:</label>
     <select id="settle-select"></select> -->
     <button id="open-settle" disabled>Manage payments</button>
+    <a href="/help/user-guide.html?section=cashier-panel" target="_blank"><button>User guide</button></a>
 
     <button id="logout">Logout</button>
   </header>
