--- a/public/maint/index.html
+++ b/public/maint/index.html
@@ -61,7 +61,8 @@
               <!-- <th>Accept Submissions</th> -->
               <th>Logo</th>
               <th>Items</th>
-              <td>Status</td>
+              <th>Status</th>
+              <th>Admin can set state</th>
               <th>Actions</th>
             </tr>
           </thead>
