Add versioning information to backend and frontend
- Implemented API endpoint to retrieve backend and schema versions.
- Displayed build version on admin, cashier, and maintenance login pages.
- Updated package.json to reflect new version.
- Enhanced banner script to fetch and show server version information.

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -21,6 +21,7 @@
                 <input type="password" id="admin-password" placeholder="Enter Password">
                 <button id="login-button">Login</button>
                 <p id="error-message" style="color:red;"></p>
+                <p id="build-version" style="color:#666; font-size:0.9em; margin-top:6px;"></p>
             </div>
         </section>
 
