--- a/public/maint/index.html
+++ b/public/maint/index.html
@@ -17,6 +17,8 @@
       <input type="password" id="maintenance-password" placeholder="Enter Maintenance Password">
       <button id="login-button">Login</button>
       <p id="error-message" style="color:red;"></p>
+      <p id="build-version" style="color:#666; font-size:0.9em; margin-top:6px;"></p>
+
       </div>
     </section>
 
