--- a/public/cashier/index.html
+++ b/public/cashier/index.html
@@ -40,6 +40,7 @@
     <input type="password" id="cashier-password" placeholder="Enter Password" autocomplete="current-password">
     <button id="login-button">Login</button>
     <p id="error-message" class="error"></p>
+    <p id="build-version" style="color:#666; font-size:0.9em; margin-top:6px;"></p>
     </div>
   </section>
 
