~Interim development snapshot~
Security: Significantly hardened the pptxgenjs config file upload
Security: Fully separated user data and code storage locations. All static path assumptions removed from codebase.
Security: SECRET_KEY moved to separate environment file
Bugfix: All entries in config.json are now correctly used

- Refactored maintenance.js to utilize configuration from config.js.
- Implemented JSON path validation for PPTX configuration saving.
- Added error handling and user feedback for configuration errors in the frontend.
- Introduced fs-guard.js for secure file path resolution and validation.
- Created json-path-validator.js for validating image paths in JSON.
- Updated cardConfig.json to include master slide configuration.
- Improved error display in the maintenance UI with detailed validation feedback.
- Updated package versions and added dotenv and envalid for environment variable management.

--- a/public/maint/index.html
+++ b/public/maint/index.html
@@ -162,6 +162,8 @@
           </select>
           <textarea id="config-json" rows="20" spellcheck="false" autocomplete="off" autocorrect="off"></textarea>
           <p id="config-error" style="color: red;"></p>
+            <div id="errorBox" class="error-box" role="alert" aria-live="polite"></div>
+            <ul id="errorList" class="error-list" hidden></ul>
           <button id="save-config">Save Config</button>
           <button id="reset-pptx-config">Reset to Default</button>
           <button onclick="document.getElementById('config-editor').style.display='none'">Cancel</button>
@@ -240,9 +242,11 @@
 
 
   </main>
-
+  <script src="/scripts/banner.js"></script>
   <script src="/scripts/maintenance.js"></script>
   <script src="/scripts/daypilot-modal-3.15.1.min.js"></script>
+
+
   
   <script>
 
