Incorporates final feature updates for payment processing + other usability improvements
feat: Replace delete payment with refund process which maintains proper payment history.
feat: Improvements to auditing function. Additional data capture and endpoint improvements. Deletion of audit data now requires backend access.
cng: build info display moved to maint screen only. Previous public endpoint removed
feat: Payments panel in maint screen. Allows viewing of payment channel status and  return URLs for SumUp. Uses new payment methods structure
feat: Test functions implemented for SumUp return URLs to allow easy route testing during setup

- Updated phase1-patch.js to include bid recording functions and improved payment methods structure.
- Added refund modal in settlement.html for processing refunds with user confirmation.
- Implemented reverse payment functionality in settlement.js, allowing cashiers to reverse payments with reasons and notes.
- Removed build version display from cashier and maintenance login pages for cleaner UI.
- Enhanced maintenance panel to display enabled payment methods with status and callback URLs.
- Updated audit log viewer to filter by event type and improved logging for payment actions.
- Refactored payment button handling in settlement.js to accommodate new payment method structure.
- Improved styling for payment methods table in maintenance.css for better readability.

--- a/public/cashier/settlement.html
+++ b/public/cashier/settlement.html
@@ -43,7 +43,7 @@
       <h3>Lots won</h3>
       <table id="lotsTable"><thead><tr><th>Lot</th><th>Title</th><th>Price</th></tr></thead><tbody></tbody></table>
       <h3>Payments</h3>
-      <table id="payTable" class="pay-list"><thead><tr><th>Time</th><th>Method</th><th>Amount</th><th>Notes</th><th></th></tr></thead><tbody></tbody></table>
+      <table id="payTable" class="pay-list"><thead><tr><th>Id</th><th>Time</th><th>Method</th><th>Amount</th><th>Notes</th><th></th></tr></thead><tbody></tbody></table>
       <div id="totals" style="margin-top:8px;"></div>
 
       <div id="payButtons" style="margin-top:12px;">
@@ -66,6 +66,22 @@
       <input id="amt" type="number" min="0" step="0.01" style="width:100%" autofocus>
       <label style="margin-top:6px;display:block;">Note</label>
       <input id="note" type="text" style="width:100%" maxlength="100" placeholder="Optional note">
+      <div style="display:flex;justify-content:flex-end;margin-top:10px;gap:8px;">
+        <button id="cancel">Cancel</button>
+        <button id="ok">Record</button>
+      </div>
+    </div>
+  </div>
+</template>
+
+<template id="refundTpl">
+  <div style="position:fixed;inset:0;background:rgba(0,0,0,.4);display:flex;justify-content:center;align-items:center;z-index:9999;">
+    <div style="background:#fff;padding:20px 24px;border-radius:8px;width:280px;">
+      <h3 id="modalTitle">Record refund</h3>
+      <label>Amount £</label>
+      <input id="amt" type="number" min="0" step="0.01" style="width:100%" autofocus>
+      <label style="margin-top:6px;display:block;">Note</label>
+      <input id="note" type="text" style="width:100%" maxlength="100" placeholder="Required reason for refund">
       <div style="display:flex;justify-content:flex-end;margin-top:10px;gap:8px;">
         <button id="cancel">Cancel</button>
         <button id="ok">Record</button>
