~~ Final planned features for next release
sec: Adds password hashing
sec: configurable pw min length enforcement
sec: Maint pw not shown in the clear on maint page
sec: SumUp payments blocked if cashier pw is set to the default
bugfix: Fixed auction reset sequencing
feature: Removed set-maint-pw.js and replaced with server-management.js supporting maint pw reset & audit log clear
feature: integrity check updated to include v2 table structures
feature: Export CSV now generates a zip file containing CSVs and metadata for each db table
remove: Removed deprecated delete invalid items functionality from integrity check.

--- a/public/maint/index.html
+++ b/public/maint/index.html
@@ -95,14 +95,13 @@
         <summary>Diagnostics</summary>
 
         <button id="photo-report">Get Photo Storage Report</button>
-        <!-- <button id="integrity-check">Run Data Integrity Check</button> -->
         <button id="cleanup-orphans">Clean Up Unused Photos</button>
         <H3>Integrity Check</H3>
 
         <button id="integrity-check">Check for Invalid Items</button>
         <div id="integrity-results" style="display:none;">
           <p id="integrity-summary"></p>
-          <button id="delete-invalid-items">Delete Invalid Items</button>
+          <!-- <button id="delete-invalid-items">Delete Invalid Items</button> -->
           <pre id="invalid-items-list" style="background:#f0f0f0; padding:10px; max-height:200px; overflow:auto;"></pre>
           <H3>Server control</H3>
           <button id="restart-server">Restart Server</button>
@@ -203,7 +202,8 @@
           </thead>
           <tbody></tbody>
         </table>
-      <p> See documentation for instructions on configuring payment processing options</p>
+      <p> See documentation for instructions on configuring payment processing options. </p>
+      <p>The default cashier password must be changed to allow SumUp payments.</p>
       </details>
 
 <details class="group">
