~~~Backend Unit tests completed~~~
feat: restart server endpoint now supports pm2 and system service operation
sec: Further hardening on public routes. login now supports wrong password lockout (default 8 tries, 5 mins) and add item has rate limiting
sec: /validate-auction and /add item no longer leak auction ID. A long random public ID is used instead. This guards against guessing our predictable auction ID
bugfix: Various small fixes uncovered by unit testing (mostly bugs in the response paths
feat: controls for the lockout and rate limiting exposed in config.json

- Added new configuration options for rate limiting
- Updated config.json with new rate limiting parameters
- Improved database handling in db.js to log warnings when using the current directory for the database path and to create a new database if it doesn't exist.
- Modified maintenance.js to return a 403 status for incorrect maintenance password attempts and improved logging.
- Updated auction state checking middleware to include public ID resolution for auctions.
- Refactored error handling in various routes to return 400 status codes for specific error cases instead of 404 or 409.
- Implemented a reset database feature in server-management.js to clear all data except for passwords and audit logs.
- Adjusted admin and submission scripts to utilize public IDs for auction references.
- Updated slideshow index.html to handle auction validation using public IDs.

--- a/public/slideshow/index.html
+++ b/public/slideshow/index.html
@@ -521,6 +521,7 @@
                 }
             }
 
+            // TODO: This needs fixing as validate-auction is a public endpoint and only returns public_id and not id. Consider building a new endpoint for this. May be better to call list auctions
             async function validateAuctionShortName(shortName) {
                 console.log("validate called");
                 if (!shortName) throw new Error("Auction name required");
@@ -533,10 +534,10 @@
 
                 const data = await res.json();
                 //    console.log(data);
-                if (res.ok && data.id) {
-                    localStorage.setItem("slideshowAuctionId", data.id);
+                if (res.ok && data.public_id) {
+                    localStorage.setItem("slideshowAuctionId", data.public_id);
                     localStorage.setItem("slideshowFullName", data.full_name);
-                    return data.id;
+                    return data.public_id;
                 } else {
                     throw new Error(data.error || "Name not found");
                 }
