Completed front-end and usability testing. New version 2.0.0-rc1
Added hover photo preview feature for better user experience in cashier and settlement views.
Items with bids can no longer be edited, moved to another auction or deleted
Various other bugfixes and improvements

- Photo extensions are now checked on item creation.
- Removed unused /config/pptx endpoints
- Refactored history endpoint to use single common audit log endpoint.
- move-auction endpoint separated from update-item and compliance checks improved
- Improved admin script for better string handling and added keyboard shortcuts for efficiency.
- Added database download functionality in maintenance scripts.
- Upload database is significantly more robust incl schema version checks
- Enhanced styles for mobile optimization across various components.
- database download/upload operations now close the db before operating to make sure that data is written backend
	-This required guards around pre-prepared SQL statements
- Database now stores schema ver. Used on db import and to skip db setup steps
- Stripped out caching functionality from checkAuctionState.js
- Cashier default password warning is now displayed dynamically
- Unit tests updated to algin

--- a/public/cashier/live-feed.html
+++ b/public/cashier/live-feed.html
@@ -32,11 +32,12 @@
 
   <table id="feed" class="datatable">
     <thead>
-      <tr><th>Paddle #</th><th>Lot</th><th>Title</th><th>Price</th></tr>
+      <tr><th>Paddle #</th><th>Lot</th><th>Title (hover to preview)</th><th>Price</th></tr>
     </thead>
     <tbody></tbody>
   </table>
 
+  <script src="/scripts/hover-photo.js"></script>
   <script src="/scripts/live-feed.js"></script>
   <script src="/scripts/banner.js"></script>
   <footer>
