FInal testing, mainly focussed on running the backend as a service. New version 2.0.0-rc2 config reverted to production settings
bugfix: slideshow now works in all states again (bug introduced by move to publicId)
feature: admin interface keyboard shortcuts on edit and add pages
bugfix: env file inline comments break systemctl. example env file updated
partial fix: server restart code is now better but unlikely to work due to security settings

Refactor server restart logic in maintenance.js to improve error handling and retry attempts;
enhance error messages and logging in payment creation;
add new tests for auction validation;
streamline admin interface with keyboard shortcuts;
clean up unused code and improve error handling in various scripts;
removed all frontend console logging

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -188,9 +188,9 @@
                     style="display: none;">
 
                 <div class="form-actions">
-                    <button type="submit">Save Changes</button>
-                    <button type="button" id="delete-item">Delete Item</button>
-                    <button type="button" id="cancel-edit">Cancel</button>
+                    <button type="submit" id="save-changes">Save Changes (Ctrl-s)</button>
+                    <button type="button" id="delete-item">Delete Item (Ctrl-d)</button>
+                    <button type="button" id="cancel-edit">Cancel (esc)</button>
                 </div>
             </form>
         </section>
@@ -214,8 +214,8 @@
                 <label for="add-photo">Upload Photo:</label>
                 <input type="file" id="add-photo" accept="image/*">
 
-                <button type="submit">Add Item</button>
-                <button type="button" id="cancel-add">Cancel</button>
+                <button type="submit" id="save-new">Add Item (Ctrl-s)</button>
+                <button type="button" id="cancel-add">Cancel (esc)</button>
             </form>
         </section>
 
