Fixes following deployment onto Ubuntu 	Missing package.json dependancy undici 	Service lockdown was too strict for Ubuntu 24 LTS 	Typos fixed in installation guides

--- a/public/help/user-guide.html
+++ b/public/help/user-guide.html
@@ -472,13 +472,11 @@ document.addEventListener("DOMContentLoaded", () => {
     <li>Hover a lot title to preview the photo (if present)</li>
   </ul>
  
-
-
   <h1>Slideshow</h1>
 
   <div class="section">
     <h2>Overview</h2>
-    <p>This slideshow is designed for unattended display during the live auction. It cycles through item images with optional text overlays and supports remote updates from the admin panel.</p>
+    <p>This slideshow is designed for unattended display during the event. It cycles through item images with optional text overlays and supports remote updates from the admin panel. New items are added to the slideshow in real-time</p>
     <img class="placeholder screenshot-large" src="/help/images/slideshow-view.png" alt="Slideshow overview screenshot">
   </div>
 
@@ -517,15 +515,6 @@ document.addEventListener("DOMContentLoaded", () => {
     </ul>
   </div>
 
-  <div class="section">
-    <h2>How It Works</h2>
-    <img class="placeholder screenshot-large" src="/help/images/slideshow-how-it-works.png" alt="Slideshow how it works screenshot">
-    <ul>
-      <li>Items are loaded dynamically from the server, but only if a photo is present for the item.</li>
-      <li>Items are shuffled (if enabled) and loop continuously. Once the queue is exhausted, it restarts.</li>
-      <li>The slideshow polls the backend regularly to fetch new items and updates in real-time.</li>
-    </ul>
-  </div>
 
  <h1>Maintenance Panel</h1>
 
